fix formatting issues